--- a/style.css
+++ b/style.css
@@ -9,3 +9,18 @@ h1,
 h2 {
   font-family: 'Playfair Display', serif;
 }
+
+.logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+h1 {
+  text-align: center;
+}
+
+p {
+  text-align: center;
+}
