--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h2 {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  text-align: center;
+
 }
 
 h1 {
@@ -23,4 +23,29 @@ h1 {
 
 p {
   text-align: center;
+}
+
+ul {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.img-bar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.img-bar img {
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+}
+
+
+.textp {
+  width: 50%;
+}
+
+.textp2 {
+  width: 48%;
 }
