--- a/style.css
+++ b/style.css
@@ -67,3 +67,42 @@ ul {
 .textp {
   width: 50%;
 }
+
+
+.menu {
+  display: flex;
+}
+
+
+
+.menu img {
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+}
+
+.menuText {
+  width: 42%;
+  position: relative;
+  top: 30px;
+  margin-left: 50px;
+}
+
+
+.menuText p {
+  text-align: left;
+}
+
+h2 {
+  text-align: center;
+}
+
+
+.btn {
+  margin-top: 10px;
+  padding: 5px 5px;
+
+}
+
+
+.zakonceni {}
