--- a/style.css
+++ b/style.css
@@ -39,10 +39,6 @@ p {
   text-align: center;
 }
 
-ul {
-  display: flex;
-  justify-content: space-evenly;
-}
 
 .img-bar {
   display: flex;
@@ -59,18 +55,36 @@ ul {
   width: 30%;
 }
 
+.second {
+  text-align: center;
+}
+
+.third {
+  text-align: end;
+}
+
 
 .textp-flex {
   display: flex;
+  justify-content: space-between;
 }
 
 .textp {
-  width: 50%;
+  width: 40%;
+}
+
+.textpMargin p {
+  margin-top: 120px;
+}
+
+.textp p {
+  text-align: left;
 }
 
 
 .menu {
   display: flex;
+  justify-content: space-around;
 }
 
 
@@ -105,4 +119,7 @@ h2 {
 }
 
 
-.zakonceni {}
+.zakonceni {
+  margin: 40px auto;
+  width: 41%;
+}
