--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html {
 h1,
 h2 {
   font-family: 'Playfair Display', serif;
+  font-size: 28px;
 }
 
 
@@ -33,6 +34,7 @@ body {
 
 h1 {
   text-align: center;
+  font-size: 35px;
 }
 
 p {
@@ -114,7 +116,12 @@ h2 {
 
 .btn {
   margin-top: 10px;
-  padding: 5px 5px;
+  padding: 15px 15px;
+  border: none;
+  font-size: 17px;
+  text-transform: uppercase;
+  color: #31353b;
+
 
 }
 
