--- a/style.css
+++ b/style.css
@@ -32,9 +32,14 @@ body {
 
 }
 
+.pmezery {
+  margin-bottom: 45px;
+}
+
 h1 {
   text-align: center;
   font-size: 35px;
+  margin-top: 45px;
 }
 
 p {
